<!DOCTYPE resources [<!ENTITY AUTHCODE_KAKAO_NATIVEAPPKEY "336e5fa0e2a8c916ffda94b2b64f5c8d">]>
<resources>
    <string name="app_name">CakeIt</string>
    <string name="shop_title">케이크가게</string>
    <string name="shop_address">서울특별시 마포구 **동 123-45</string>
    <string name="shop_zzim_count">132</string>
    <string name="shop_order_availability_date">주문 가능 날짜 보기</string>
    <string name="cake_information_title">케이크 정보</string>
    <string name="cake_information_theme">테마</string>
    <string name="cake_information_price_by_size">크기별 가격</string>
    <string name="cake_information_cream_type">크림 종류</string>
    <string name="cake_information_sheet_type">시트 종류</string>
    <string name="shop_inform_notice_title">가게 안내사항</string>
    <string name="shop_inform_notice_time">운영시간</string>
    <string name="shop_inform_notice_pickup_time">픽업 가능 시간</string>
    <string name="shop_inform_notice_closed_days">휴무일</string>
    <string name="shop_inform_notice_phone">전화번호</string>
    <string name="shop_connect">케이크 문의하기</string>

    <string name="mypage_title">마이페이지</string>
    <string name="mypage_welcome">%1$s님, 환영합니다!</string>
    <string name="mypage_service_center">고객센터</string>
    <string name="mypage_announcement">공지사항</string>
    <string name="mypage_qna">문의하기</string>
    <string name="mypage_info">정보</string>
    <string name="mypage_terms_of_service">서비스 이용약관</string>
    <string name="mypage_terms_of_private_info">개인정보 수집 및 이용</string>
    <string name="mypage_opensource_license">오픈소스 라이선스</string>
    <string name="mypage_version_info">버전 정보</string>
    <string name="mypage_cakeit_pfchannel_id">_xcpvHK</string>

    <string name="shop_design_fragment_name">케이크 디자인</string>
    <string name="shop_inform_fragment_name">가게 상세</string>
    <string name="shop_tag_name">가게 태그</string>
    <string name="shop_size_type">크기 1호</string>
    <string name="shop_size_price">18,000원</string>

    <string name="shop_list_filter_refresh">초기화</string>
    <string name="shop_list_filter_recommend">기본순</string>
    <string name="shop_list_filter_pickup_region">픽업 지역</string>
    <string name="shop_list_filter_pickup_availability_date">픽업 가능 날짜</string>

    <string name="filter_list_name">필터 리스트 아이템</string>
    <string name="shop_info_address">주소복사</string>
    <string name="shop_info_map">지도보기</string>

    <!-- ZZIM TAB -->
    <string name="zzim_title">찜한 아이템</string>
    <string name="zzim_design_fragment_name">케이크</string>
    <string name="zzim_shop_fragment_name">가게</string>

    <!-- HOME TAB -->
    <string name="home_theme">오늘은 어떤 특별한 날인가요? 🎁</string>
    <string name="home_hide_theme">숨기기</string>
    <string name="home_birth">생일</string>
    <string name="home_anniversary">기념일</string>
    <string name="home_wedding">결혼</string>
    <string name="home_company_1">입사</string>
    <string name="home_company_2">승진</string>
    <string name="home_company_3">퇴사</string>
    <string name="home_company_4">복직</string>
    <string name="home_military">전역</string>
    <string name="home_graduation">졸업</string>
    <string name="home_view_more">더보기</string>
    <string name="home_etc">기타</string>
    <string name="home_popular_cake">요즘 핫한 케이크 😎</string>

    <!-- TAB -->
    <string name="tab_home">홈</string>
    <string name="tab_search">검색</string>
    <string name="tab_shop">케이크 가게</string>
    <string name="tab_zzim">찜</string>
    <string name="tab_mypage">마이페이지</string>

    <!-- SEARCH LIST -->
    <string name="searchlist_design_fragment_name">케이크</string>
    <string name="searchlist_shop_fragment_name">가게</string>


    <!-- LOGIN -->
    <string name="login_welcome">마음을 전하는</string>
    <string name="login_welcome2">가장 달콤한 방법</string>
    <!-- Login auth code -->
    <!-- kakao -->
    <string name="AUTHCODE_KAKAO_NATIVEAPPKEY">&AUTHCODE_KAKAO_NATIVEAPPKEY;</string>
    <string name="AUTHCODE_KAKAO_REDIRECTURI">kakao&AUTHCODE_KAKAO_NATIVEAPPKEY;</string>
    <!-- naver -->
    <string name="AUTHCODE_NAVER_CLIENTID">N2SMwopXbdrTDABqVn1m</string>
    <string name="AUTHCODE_NAVER_SECRET">PFv_FX3EsN</string>
    <!-- google-->
    <string name="AUTHCODE_GOOGLE_CLIENTID">911891330500-f586aevn27sktah813pncac2qa5na15v.apps.googleusercontent.com</string>
    <string name="AUTHCODE_GOOGLE_SECRET">0O6-MpiaLrtB-EWXWXTKUs38</string>
</resources>