<?xml version="1.0" encoding="utf-8"?>
<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.shop.ShopActivity">
    
    <data>
        <variable
            name="viewModel"
            type="com.cakeit.cakitandroid.presentation.shop.ShopViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/btn_shop_back"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="7dp"
                />

            <TextView
                android:id="@+id/tv_shop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:text="@string/shop_title"
                android:textColor="#242424"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_shop_back" />

            <TextView
                android:id="@+id/tv_shop_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/shop_address"
                android:textColor="#909090"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tv_shop_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_title" />

            <Button
                android:id="@+id/btn_shop_zzim"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="11dp"
                android:background="@drawable/ic_heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_shop_back"
                tools:layout_conversion_absoluteHeight="38dp"
                tools:layout_conversion_absoluteWidth="38dp" />

            <TextView
                android:id="@+id/tv_shop_zzim_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/shop_zzim_count"
                android:textColor="#3d3d3d"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_shop_zzim"
                app:layout_constraintStart_toStartOf="@+id/btn_shop_zzim"
                app:layout_constraintTop_toBottomOf="@+id/btn_shop_zzim"
                />

            <Button
                android:id="@+id/btn_shop_order_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_order_availability_date"
                android:layout_marginHorizontal="20dp"
                android:text="@string/shop_order_availability_date"
                android:textColor="#577399"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_address" />

            <View
                android:id="@+id/view_shop_top"
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:layout_marginTop="29dp"
                android:background="#f5f5f5"
                app:layout_constraintTop_toBottomOf="@+id/btn_shop_order_availability"
                tools:layout_editor_absoluteX="0dp"
                />

            <TextView
                android:id="@+id/tv_shop_cake_inform_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake_information_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_shop_top"
                android:layout_marginStart="24dp"
                android:textSize="14sp"
                android:textColor="#242424"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                />

            <View
                android:id="@+id/view_shop_middle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_marginTop="11.5dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_cake_inform_title"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_shop_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake_information_theme"
                android:layout_marginStart="24dp"
                android:layout_marginTop="19.5dp"
                android:textColor="#909090"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_shop_middle"
                />

            <TextView
                android:id="@+id/tv_shop_theme_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="#3d3d3d"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tv_shop_price_by_size"
                app:layout_constraintTop_toBottomOf="@+id/view_shop_middle"
                />

            <TextView
                android:id="@+id/tv_shop_price_by_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake_information_price_by_size"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:textColor="#909090"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_theme"
                />

            <TextView
                android:id="@+id/tv_shop_price_content_by_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:text=""
                android:layout_marginEnd="20dp"
                android:textColor="#3d3d3d"
                android:textSize="12sp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/tv_shop_price_by_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_theme_content" />

            <TextView
                android:id="@+id/tv_shop_cream_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/cake_information_cream_type"
                android:textColor="#909090"
                android:textSize="12sp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_price_content_by_size" />

            <TextView
                android:id="@+id/tv_shop_cream_type_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:text=""
                android:textColor="#3d3d3d"
                android:textSize="12sp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toEndOf="@+id/tv_shop_price_by_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_price_content_by_size" />


            <TextView
                android:id="@+id/tv_shop_sheet__type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cake_information_sheet_type"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:textSize="12sp"
                android:textColor="#909090"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_cream_type"
                />

            <TextView
                android:id="@+id/tv_shop_sheet_type_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:text=""
                android:textColor="#3d3d3d"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/tv_shop_price_by_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_cream_type_content" />

            <View
                android:id="@+id/view_shop_cake_inform"
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:layout_marginTop="20dp"
                android:background="#f5f5f5"
                app:layout_constraintTop_toBottomOf="@+id/tv_shop_sheet_type_content"
                tools:layout_editor_absoluteX="0dp"
                />

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl_shop_tablayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                app:layout_constraintTop_toBottomOf="@+id/view_shop_cake_inform"
                >

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_shop_tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_shop_viewpager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@+id/abl_shop_tablayout"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    
</layout>